[package]
name = "strategy-haven"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_dylib = { version = "0.16.1" }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
hex = "0.4"
crossbeam = "0.8.4"
bevy_ui_text_input = "0.5.2"
bevy-inspector-egui = "0.33.1"
bevy_hookup_core = "2.0.0"
bevy_hookup_messenger_self = "2.0.0"
bevy_hookup_messenger_websocket = "2.1.0"
bitflags = "2.9.4"
rand = "0.9.2"
bevy_panorbit_camera = { version = "0.28.0", features = ["bevy_egui"] }
